--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "keywords": [],
   "authors": [
     "Damian Kędra (Naimad123x / wrx81745@student.wsb.wroclaw.pl / wrx81745@student.wroclaw.merito.pl)",
-    "",
+    "Oskar Grudkowski (GrudkowskiOskar / wrx81747@student.wsb.wroclaw.pl / wrx81747@student.wroclaw.merito.pl)",
     ""
   ],
   "license": "ISC",
