--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
@@ -23,6 +24,7 @@
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "mysql2": "^3.9.2",
+    "nodemailer": "^6.9.12",
     "winston": "^3.12.0"
   }
 }
