--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-rate-limit": "^7.2.0",
+    "express-session": "^1.18.0",
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "mysql2": "^3.9.2",
+    "nanoid": "^3.3.7",
     "nodemailer": "^6.9.12",
     "winston": "^3.12.0"
   }
