--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.3",
     "express-rate-limit": "^7.2.0",
     "express-session": "^1.18.0",
+    "highlight.js": "^11.9.0",
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "mysql2": "^3.9.2",
