Blog order by date

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "authors": [
     "Damian Kędra (Naimad123x / wrx81745@student.wsb.wroclaw.pl / wrx81745@student.wroclaw.merito.pl)",
     "Oskar Grudkowski (GrudkowskiOskar / wrx81747@student.wsb.wroclaw.pl / wrx81747@student.wroclaw.merito.pl)",
-    "Błażej Dzwoniarek (dzwonek1 / wrx79891@student.wsb.wroclaw.pl / wrx79891@student.wroclaw.merito.pl)",
-    ""
+    "Błażej Dzwoniarek (dzwonek1 / wrx79891@student.wsb.wroclaw.pl / wrx79891@student.wroclaw.merito.pl)"
   ],
   "license": "ISC",
   "dependencies": {
